<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/business_app_description"
    android:orientation="vertical"
    tools:context="com.example.muhammadahsan.bussinessprofile.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/qantas_airlines"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/business_content"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/facebook"
            android:layout_margin="1dp"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/twitter"
            android:layout_margin="1dp"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/youtube"
            android:layout_margin="1dp"
            android:layout_marginRight="0dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="12sp"
        android:text="@string/business_app_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/phone_icon"
                    android:layout_marginLeft="10dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/business_contact"
                    android:textSize="15sp"
                    android:gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="05dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/mail"
                    android:layout_marginLeft="10dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/business_email"
                    android:textSize="15sp"
                    android:gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="05dp"
                    />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/browser"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business_web"
                android:textSize="15sp"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="05dp"
                />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/location"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="05dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/business_address"
                    android:textSize="15sp"
                    android:gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    />
            </LinearLayout>

    </LinearLayout>

</LinearLayout>

